Fixed css alignment for hotel proerty detail

--- a/src/app.css
+++ b/src/app.css
@@ -130,7 +130,7 @@ html,
   justify-content: center;
 }
 #scrollContainer {
-  overflow: scroll;
+  overflow-y: scroll;
   height: 90%;
 }
 
@@ -322,14 +322,39 @@ html,
   color: gray;
 }
 
-.neighborhoods {
+.neighborhood {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  margin-right: 2em;
 }
 
-.hotel-text {
+.hotel-item-detail {
   display: flex;
-  width: 70%;
   flex-direction: row;
-  margin-left: 1em;
+  border: 1px solid black;
+  /* justify-content: space-between; */
+  margin: 1em;
+  padding: 1em;
+}
+
+
+.hotel-detail-img {
+  /* border: 1px solid white; */
+  margin-right: 1em;
+}
+
+.hotel-detail-desc {
+  display: flex;
+  flex-direction: column;
+  align-self: stetch;
+  flex-grow: 2;
+  /* border: 1px solid white; */
+
+}
+
+.hotel-detail-price {
+  display: flex;
+  /* align-items: flex-end; */
+  align-self: flex-end;
+  /* border: 1px solid white; */
 }
